== 2.15c - 28 November 2020 ==
- On options panel changed "discussions" to "social activity"


== 2.15b - 21 November 2020 ==
-my fix to UCP removing "collapsible" for RC style tables conflicted with default collapsible behavior due to class names. fixed this by updating class names to not conflict


== 2.15 - 1 November 2020 ==
-Added option to hide wikis
	-Added buttons for hiding/showing the wiki to the panel as well as wiki list (to show all hidden ones at once)
	-Hidden wikis show up in a new section to the right of loaded wikis
-Code rewrite and small redesign for wiki info panel
	-Wiki name now appears above stat table instead of to the left
	-Wiki favicon now shows up on the left by itself, and is twice the size
-Loaded wikis now always show up in the same order (instead of in the order of when they loaded), to make it easier to find the one you want to click
-"Wikis Loaded" now has a tooltip to make it more obvious wiki icons are clickable


== 2.14d - 31 October 2020 ==
-Fixed small CSS issue on UCP regarding wiki backgrounds
-Updated build packages / removed unused ones
	-Changed build output from `build/` to `dist/`
	-During build comments are now removed from output
-Small WikiData rewrite
-Fixed bug with fandom comment page names being double encoded in urls
-discussion-based posts done by anons now properly uses their IPs


== 2.14c - 27 September 2020 ==
-Fixed bug preventing "protect" logs from showing details on modern wikis (UCP)
-Script updated so it will fire after VisualEditor edits (both before and after core script is loaded)
-Renamed some JS classes
-Moved static RCData modal helper functions to thier own file GlobalModal
-Moved log data in RCData to RCDataLog


== V2.14b - 23 September 2020 ===
-UCP tweaks / bug fixes
-Fixed word wrap issue based on script's talk page
-Discussion-based comments now link correctly
-Changing dev i18n translation data to use my wiki2html for parsing over the dev script's version to avoid it's html escaping