@@ -1,5 +1,6 @@
 == 2.15c - 28 November 2020 ==
-- On options panel changed "discussions" to "social activity"
+-On options panel changed "discussions" to "social activity"
+-If nothing in "social activity" is selected, it now says "(none)" instead of being blank
 
 
 == 2.15b - 21 November 2020 ==
